--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -12,7 +12,7 @@
       </trans-unit>
       <trans-unit id="6866271266781863357" datatype="html">
         <source>Des chiffres vont s&apos;afficher (0, +2, -3, ...)</source>
-        <target>reogihergoiehrgiehri (0, +2, -3, ...)</target>
+        <target>Des chiffres vont s'afficher (0, +2, -3, ...)</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/page-home/page-home.component.html</context>
           <context context-type="linenumber">10,11</context>
